# MeshReconstruction

./: .gitignore  CMakeLists.txt  MeshReconstruction.sln  MeshSimplification.sln  README.md
MeshReconstruction/: CGALTypes.h  MeshReconstruction.vcxproj  MeshReconstruction.vcxproj.filters  Partition.cpp  Partition.h  PolyhedronSegmentation.cpp  PolyhedronSegmentation.h  Remesh.h  UtilLib.cpp  UtilLib.h  Voxel.cpp  Voxel.h  main.cpp  test.cpp
MeshSimplification/: CGALTypes.h  MeshSimplification.vcxproj  MeshSimplification.vcxproj.filters  Partition.cpp  Partition.h  PolyhedronSegmentation.cpp  PolyhedronSegmentation.h  UtilLib.cpp  UtilLib.h  main.cpp  test.cpp
src/: AlgoDebugConfig.h  AlgoDebugIO.cpp  AlgoDebugIO.h  CGALTypes.h  ExtendedMarchingCube.cpp  ExtendedMarchingCube.h  MeshReconstruction.cpp  MeshReconstruction.h  Partition.cpp  Partition.h  PolyhedronSegmentation.cpp  PolyhedronSegmentation.h  Ransac.cpp  Ransac.h  Remesh.cpp  Remesh.h  UtilLib.cpp  UtilLib.h  Voxel.cpp  Voxel.h  main.cpp  test.cpp
